# roadmap-backend-projects

personal-blog/: admin.html  article.html  home.html  new.html
personal-blog/personal-backend/: Cargo.toml  blog.sqlite
personal-blog/personal-backend/html/: admin.html  article.html  edit_article.html  home.html  new_article.html
personal-blog/personal-backend/src/: handlers.rs  html.rs  main.rs  models.rs  utils.rs
redis-playground/: Cargo.toml
redis-playground/src/: main.rs
unit-converter/: index.html  script.js
weather-api/: index.html
weather-api/weather-backend/: .env.example  Cargo.toml  result.json
weather-api/weather-backend/src/: main.rs  models.rs
weather-app-2/: index.html  script.js
weather-app-2/weather-backend/: .env.example  Cargo.toml
weather-app-2/weather-backend/src/: api.rs  cache.rs  handlers.rs  main.rs  models.rs
weather-app-2/weather-backend/static/: script.js
