[package]
name = "personal-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-auth = "0.8.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
base64 = "0.22.1"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
tinytemplate = "1.2.1"
tokio = { version = "1.48.0", features = ["full"] }
